# BetterControlPanel

./: .gitignore  Cargo.toml  README
BetterControlPanel/: .gitignore  Cargo.toml  build.rs  index.html  package-lock.json  package.json  tsconfig.json
BetterControlPanel-Console/: Cargo.toml
BetterControlPanel-Console/src/: main.rs
BetterControlPanel-Server/: Cargo.toml
BetterControlPanel-Server/src/: main.rs
BetterControlPanel/src/: App.vue  main.rs  main.ts
BetterControlPanel/src-tauri/: Cargo.toml  tauri.conf.json
BetterControlPanel/src-tauri/capabilities/: default.json
BetterControlPanel/src-tauri/icons/: icon.icns
BetterControlPanel/src-tauri/src/: game.rs  lib.rs  main.rs  tray.rs
BetterControlPanel/src-tauri/src/game/: particle_effects.rs
BetterControlPanel/src/animation/: FireAnimation.ts
BetterControlPanel/src/router/: index.ts
BetterControlPanel/src/styles/: icon.css  window-controls.css
BetterControlPanel/src/utils/: mathjax.js  mathjax.ts
BetterControlPanel/src/views/: LevelSelect.vue  NotFound.vue  Welcome.vue
BetterControlPanel/src/views/levels/: Chemistry.vue  Math.vue
Test/: Cargo.toml
Test/src/: main.rs
better_control_panel/: Cargo.toml  README.md
better_control_panel/src/: eframe.rs  ipc.rs  lib.rs  log.rs  util.rs
better_control_panel/src/util/: auto_install.rs  command.rs  process.rs
test/: Cargo.toml  build.rs
test/src/: lib.rs  main.rs
test_macro/: Cargo.toml
test_macro/src/: lib.rs
