[package]
name = "BetterControlPanel"
version = "0.1.0"
edition = "2024"

[dependencies]
better_control_panel = { version = "0.1.0", path = "../better_control_panel", features = [
    "eframe",
] }
clap = { version = "4.5.34", features = ["derive"] }
eframe = "0.31.1"
egui_extras = "0.31.1"
env_logger = "0.11.7"
log = "0.4.27"
