[package]
name = "BetterControlPanel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
nightly = ["better_control_panel/thread_id_value"]

[dependencies]
better_control_panel = { version = "0.1.0", path = "../better_control_panel", features = [
    "eframe",
] }
clap = { version = "4.5.34", features = ["derive"] }
eframe = "0.31.1"
egui_extras = "0.31.1"
image = "0.25.6"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
