[package]
name = "better_control_panel"
version = "0.1.0"
edition = "2024"
description = "better control panel"
license-file = "../LICENSE"

[features]
default = []
eframe = ["dep:eframe", "dep:egui_extras"]

[dependencies]
chrono = "0.4.40"
eframe = { version = "0.31.1", optional = true }
egui_extras = { version = "0.31.1", optional = true }
interprocess = "2.2.3"
lazy_static = "1.5.0"
log = "0.4.27"
raw-window-handle = "0.6.2"
single-instance = "0.3.3"
window-vibrancy = "0.6.0"
