[package]
name = "test"
version = "0.1.0"
authors = ["https://github.com/yuanair/"]
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
num = { version = "0.4.3", features = ["serde"] }
log = { version = "0.4.25", features = [] }
winit = { version = "0.30.8", features = [] }
serde = { version = "1.0.136", features = [] }
ash = { version = "0.38.0+1.3.281", features = [] }
ndk = { version = "0.9.0", features = ["jni"] }
ndk-glue = { version = "0.7.0", features = [] }

test_macro = { path = "../test_macro" }
